--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,9 +1,10 @@
 body {
   font-family: Helvetica, sans-serif;
+  text-align: center;
 }
 .header {
   color: white;
-  background-image: src="Resources/images/the-flatiron-building.png"
+  background-image: url("Resources/images/the-flatiron-building.png")
 }
 h1 {
   font-size: 70px;
