--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 .header {
   color: white;
-  background-image: url("Resources/images/the-flatiron-building.png")
+  background-image: url("Resources/images/the-flatiron-building.png");
 }
 h1 {
   font-size: 70px;
