--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -2,11 +2,24 @@ body {
   font-family: Helvetica, sans-serif;
   text-align: center;
 }
+h1 {
+  font-size: 70px;
+  font-weight: bold;
+}
+h2 {
+  font-size: 32px;
+  font-weight: bold;
+  color: black;
+}
+ul {
+   list-style:none;
+}
 .header {
   color: white;
   background-image: url("../images/the-flatiron-building.png");
 }
-h1 {
-  font-size: 70px;
-  font-weight: bold;
+.header a {
+  line-height: 2;
+  color: white;
+  list-style-type: none;
 }
