--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -11,8 +11,16 @@ h2 {
   font-weight: bold;
   color: black;
 }
+h3 {
+  font-size: 23px;
+  font-weight: bold;
+}
+p {
+  font-size: 14px;
+}
 ul {
    list-style:none;
+   padding: 0;
 }
 .header {
   color: white;
