--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -19,6 +19,7 @@ p {
   font-size: 14px;
 }
 ul {
+  display: inline;
    list-style:none;
    padding: 0;
 }
@@ -33,4 +34,12 @@ ul {
 .divider h3 {
   color: white;
   background-image: url("../images/the-flatiron-building.png");
+}
+.copy {
+  font-size: 11px;
+  color: white;
+  background-color: dimgray;
+}
+.footer ul {
+  display: inline;
 }
